--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/effects": "^15.3.0",
     "@ngrx/entity": "^15.3.0",
     "@ngrx/store": "^15.3.0",
+    "ngx-toastr": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
